EKS/03_load_balancer_controller/manifest/order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: thenextgen-alb
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    alb.ingress.kubernetes.io/healthcheck-port: "80"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/actions.order-rewrite: >
      {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"order-service","servicePort":"80"}],"stickinessConfig":{"enabled":false}}}
spec:
  ingressClassName: alb
  rules:
    - host: thenextgen.solutions
      http:
        paths:
          - path: /order/*
            pathType: Prefix
            backend:
              service:
                name: order-rewrite
                port:
                  number: 80
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
